--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         applicationId "com.jalexy.pussygallery"
         minSdkVersion 16
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
 
@@ -39,17 +40,30 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+    implementation "androidx.multidex:multidex:2.0.1"
+
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     implementation 'com.squareup.okhttp3:okhttp:4.8.1'
 
     implementation 'com.google.dagger:dagger:2.1'
     kapt 'com.google.dagger:dagger-compiler:2.1'
+
+    implementation "com.github.moxy-community:moxy:2.2.1"
+    implementation "com.github.moxy-community:moxy-android:2.2.1"
+    implementation "com.github.moxy-community:moxy-androidx:2.2.1"
+    kapt "com.github.moxy-community:moxy-compiler:2.2.1"
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
