- finish functional part of activity for reviewing image     * it show pussy image     * it can download image

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".mvp.view.ui.PussyDetailsActivity"
+            android:name=".mvp.view.ui.PussyActivity"
             android:parentActivityName=".mvp.view.ui.MainActivity">
         </activity>
 
