--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,14 +58,10 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.1'
     kapt 'com.google.dagger:dagger-compiler:2.1'
 
-    implementation "com.github.moxy-community:moxy:2.2.1"
-    implementation "com.github.moxy-community:moxy-android:2.2.1"
-    implementation "com.github.moxy-community:moxy-androidx:2.2.1"
-    kapt "com.github.moxy-community:moxy-compiler:2.2.1"
-
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
